# tama

./: .gitignore  Cargo.toml  README.md  build.sh
examples/: counter.py
python-sdk/: README.md  pyproject.toml  setup.py
python-sdk/tama/: __init__.py
src/: codegen.rs  ir.rs  lib.rs  main.rs  parser.rs
