[package]
name = "tama"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tama"
path = "src/main.rs"

[lib]
name = "tama"
path = "src/lib.rs"

[dependencies]
rustpython-parser = "0.4.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"
num-bigint = { version = "0.4", features = ["serde"] }
